--- a/MMORPG/nbproject/project.properties
+++ b/MMORPG/nbproject/project.properties
@@ -35,9 +35,9 @@ includes=**
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}:\
     ${libs.eclipselink.classpath}:\
-    ${libs.PostgreSQLDriver.classpath}
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${javafx.classpath.extension}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
